samples/_failures_safe/1761353977_5d3616_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fd881a9.c: In function ‘main’:
./samples/SAFE/__tmp_8fd881a9.c:144:16: error: missing terminating " character
  144 |         printf("2. Multiply matrices
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8fd881a9.c:144:9: error: expected expression at end of input
  144 |         printf("2. Multiply matrices
      |         ^~~~~~
./samples/SAFE/__tmp_8fd881a9.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fd881a9.c:144:9: error: expected declaration or statement at end of input
